# oma_gui

./: .gitignore  flow of EFDD_SSIdat_clustering_sel freq_mode shape_FR.txt  main.py  pyproject.toml
main/: oma_GUI.py  oma_GUI_test.py
test/: csv_比較_.py  cutoff_outliers_from_clusters.py  test_履歴.xlsx  ああああああああ.py  振動データ_60秒の微動取り出し.py  振動データの確認.py  振動データの連結.py
卍_oma_gui/: oma_GUI_v0.0.py  oma_GUI_v0.10.py  oma_GUI_v0.11.py  oma_GUI_v0.12.py  oma_GUI_v0.13.py  oma_GUI_v0.14.py  oma_GUI_v0.15.py  oma_GUI_v0.15_-1.py  oma_GUI_v0.16.py  oma_GUI_v0.17.2.py  oma_GUI_v0.17.3.py  oma_GUI_v0.17.py  oma_GUI_v0.18.py  oma_GUI_v0.19.2.py  oma_GUI_v0.19.py  oma_GUI_v0.1_test_OK.py  oma_GUI_v0.2.py  oma_GUI_v0.20.py  oma_GUI_v0.21.py  oma_GUI_v0.3.py  oma_GUI_v0.4.py  oma_GUI_v0.5.py  oma_GUI_v0.6.py  oma_GUI_v0.7.py  oma_GUI_v0.8-Yoko.py  oma_GUI_v0.8.py  oma_GUI_v0.9.py  oma_GUI変更点.ini
卍_oma_gui/original/: SSIdat_clustering_sel freq_mode shape - コピー.py  SSIdat_clustering_sel freq_mode shape.py
