[project]
name = "oma-gui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "pydantic>=2.11.7",
    "pyqt6>=6.9.1",
    "pyvista>=0.46.3",
    "pyvistaqt>=0.11.3",
    "scipy>=1.16.1",
    "tqdm>=4.67.1",
]
